--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
   
         <p style="font-size: 22px;">Model is trained to identify the following faces: </p>
         <b class="objects">
- Anjaneye
-  <hr>
-  Myra
+  Hriday
   <hr>
   Pranay
   <hr>
- Hriday
+ Mother
   <hr>
- Jeevanshi
+  Myra
+  <hr>
+  Anjaneye
   <hr>
   <hr>
   </b>
