--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
   <button onclick="cheak()" id="selres" class="btn btn-danger">Identify Image</button>
         <br><br>
   
-        <p style="font-size: 22px;">Object : <span class="result_object_name"></span>  </p>
-        <p style="font-size: 22px;">Accuracy : <span class="result_object_accuracy"></span> </p>
+        <p style="font-size: 22px;">Object : <span id="result_object_name"></span>  </p>
+        <p style="font-size: 22px;">Accuracy : <span id="result_object_accuracy"></span> </p>
       </center>
   
     </div>
